# wallet_as_service

./: .rusty-hook.toml  Cargo.toml  README.md  deny.toml  test.sh  test_script.sh
src/: gg20_keygen.rs  gg20_signing.rs  gg20_sm_client.rs  gg20_sm_manager.rs  handlers.rs  main.rs  paillier_validator.rs  secure_key.rs  utils.rs
vault/server/: local-share3.json
vault/users/: local-share1.json  local-share2.json
