[package]
name = "wallet_as_service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
uuid = { version = "1", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.10"
hex = "0.4"
thiserror = "1"
secp256k1 = "0.21"
zeroize = "1.4"

[dev-dependencies]
rusty-hook = "^0.11"
