[package]
name = "kms_trial"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
multi-party-ecdsa = "0.8.1"
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"
aes-gcm = "0.9.4"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
surf = "2"
async-sse = "5"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}
log = "0.4"
env_logger = "0.10"
num-bigint = {version = "0.4", features = ["rand"]}
num-integer = "0.1"
num-traits = "0.2"
fastrand = "1.8"
num-primes = "0.3.0"

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.6"
default-features = false
optional = true

[[bin]]
name = "gg20_keygen"
path = "src/gg20_keygen.rs"

[[bin]]
name = "gg20_sm_manager"
path = "src/gg20_sm_manager.rs"

[[bin]]
name = "gg20_signing"
path = "src/gg20_signing.rs"

[[bin]]
name = "gg20_sm_client"
path = "src/gg20_sm_client.rs"

[dev-dependencies]
rusty-hook = "^0.11"
